--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
-streamlit
-pandas
-numpy
-plotly
+# GR-Pilot - Toyota Race Engineering Assistant
+# Python 3.11+
+
+# Core Framework
+streamlit==1.31.1
+streamlit-option-menu==0.3.12
+
+# Data Processing
+pandas==2.2.0
+numpy==1.26.3
+scipy==1.12.0
+
+# Visualization
+plotly==5.18.0
+matplotlib==3.8.2
+seaborn==0.13.1
+
+# AI/ML
+openai==1.12.0
+groq==0.4.2
+
+# Utilities
+python-dotenv==1.0.1
+pillow==10.2.0
+
+# Testing
+pytest==8.0.0
+pytest-cov==4.1.0
+
+# Code Quality
+black==24.1.1
+flake8==7.0.0
