--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,9 @@
 fastapi==0.115.0
-uvicorn==0.30.0
+uvicorn[standard]==0.30.0
 pandas==2.2.0
 numpy==1.26.0
+scikit-learn==1.5.1
+xgboost==2.1.1
 groq==0.11.0
 python-multipart==0.0.9
+python-dotenv==1.0.0
