Update .gitignore: Exclude large files from repository
- Remove CSV data files from git tracking
- Add comprehensive ignore rules for:
  * All data files (CSV, XLSX, Parquet)
  * ML model files (PKL, H5, PT)
  * Compressed archives (ZIP, RAR, 7Z, TAR)
  * Large media files (MP4, MP3, etc.)
  * Large folders (cota/, datasets/, archives/)
  * Database files (DB, SQLite)

This reduces repository size and prevents large files from being pushed to GitHub.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,37 @@ data/
 *.onnx
 backend/ml/trained_models/*.pkl
 backend/ml/trained_models/*.h5
+
+# Compressed files (archives)
+*.zip
+*.rar
+*.7z
+*.tar
+*.tar.gz
+*.tgz
+*.gz
+*.bz2
+
+# Large media files
+*.mp4
+*.avi
+*.mov
+*.wmv
+*.flv
+*.mkv
+*.mp3
+*.wav
+*.psd
+*.ai
+
+# cota and other large folders
+cota/
+datasets/
+archives/
+
+# Large binary files (over 10MB typically)
+*.bin
+*.dat
+*.db
+*.sqlite
+*.sqlite3
